--- a/2-Door.html
+++ b/2-Door.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FISK: 2-Door</title>
+    <title>SIFK Motorsports</title>
 
     <!--bootstrap link-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" 
@@ -46,7 +46,7 @@
       <!--Top Bar sliding text-->
       <div class="top-bar">
         <div class="top-bar-logo">
-            SIFK Motorsports
+            FISK Motorsports
         </div>
         <button class="top-bar-sign" 
         onclick="document.getElementById('id01').style.display='block'" 
@@ -55,7 +55,8 @@
         <img src="https://www.w3schools.com/howto/img_avatar.png" alt="Avatar" class="avatar">
         &emsp;Sign Up
         </button>
-        <marquee direction="left" style="flex: 1; white-space: nowrap;">
+        <marquee direction="left" style="flex: 1; white-space: nowrap; text-shadow:
+        0 0 10px #fff;">
             Welcome to SIFK Motorsports! &emsp;|&emsp; 
             Find Your Perfect Ride Faster &emsp;|&emsp;
             Made by Surya, Iarla, Fionn, Karol &emsp;|&emsp;
@@ -76,6 +77,8 @@
           “I’d like to consider Ferrari as a scaled down version of God.” - Jeremy Clarkson &emsp;|&emsp;
           “I’m sorry, but having an Aston Martin DB9 on the drive and not driving it is a bit like having Keira Knightley in your bed and sleeping on the couch. If you’ve got even half a scrotum it’s not going to happen.” - Jeremy Clarkson &emsp;|&emsp;
           "Aerodynamics are for people who can't build engines" - Enzo Ferrari
+
+
         </marquee>
     </div>
 
@@ -133,13 +136,16 @@
       <img class="mySlides-img" src="Fisk-poster.jpg" style="width:80%; display: block;margin-left: auto; margin-right:auto;">
       <div class="text" style="bottom:40%"> Discover. Drive. Dare. Delight.
       </div>
+    </div>
     <div class="mySlides">
       <img class="mySlides-img" src="m3_slide.jpg" style="width:80%; display: block;margin-left: auto; margin-right:auto;">
-      <div class="text">BMW M3</div>
+      <div class="text" style="bottom:40%">BMW M3 <br> <img src="https://cdn.freebiesupply.com/logos/large/2x/bmw-m-series-1-logo-png-transparent.png" style="width: 5%;">
+      </div>
     </div>
     <div class="mySlides">
       <img class="mySlides-img" src="12-cilindri_slide.jpg" style="width:80%; display: block;margin-left: auto; margin-right:auto;">
-      <div class="text">Dodici Cilindri</div>
+      <div class="text" style="bottom: 40%;">Dodici Cilindri <br> <img src="https://www.logo.wine/a/logo/Ferrari/Ferrari-Logo.wine.svg" style="width: 8%;"> 
+      </div>
     </div>
     <div class="mySlides">
       <img class="mySlides-img" src="g-wagon_slide.jpg" style="width:80%; display: block;margin-left: auto; margin-right:auto;">
@@ -160,8 +166,8 @@
 
     <!--------------------------------------------------------------------------------------->
 
-    <!--Main Area-->
-    <div class="big-cont">
+  <!--Main Area-->
+  <div class="big-cont">
     <ul class="navbar">
         <li><a href="2-Door.html">2-Door</a></li>
         <li><a href="4-Door.html">4-Door</a></li>
@@ -295,8 +301,8 @@
       </div>
     </div>
     </div>
-
-        <!--Footer-->
+    
+    <!--Footer-->
       <footer class="bg-dark text-white text-center p-3">
       <div class="container my-4">
         <div class="row">
@@ -335,9 +341,9 @@
         <div class="col-md-2">
           <h6 style="text-align: left;">General</h6>
           <ul class="footer-emails">
-            <li><a href="Signup.html">Sign Up</a></li>
-            <li><a href="Login.html">Log In</a></li>
-            <li><a href="Purchase.html">Checkout</a></li>
+            <li><a href="file:///C:/Users/surya/Downloads/Motorworks/Signup.html">Sign Up</a></li>
+            <li><a href="file:///C:/Users/surya/Downloads/Motorworks/Login.html">Log In</a></li>
+            <li><a href="file:///C:/Users/surya/Downloads/Motorworks/Purchase.html">Checkout</a></li>
           </ul>
       </div>
       <div class="col-md-3">
