--- a/Parts.html
+++ b/Parts.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FISK: Auto-Parts</title>
+    <title>SIFK Motorsports</title>
 
     <!--bootstrap link-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" 
@@ -55,29 +55,8 @@
         <img src="https://www.w3schools.com/howto/img_avatar.png" alt="Avatar" class="avatar">
         &emsp;Sign Up
         </button>
-<marquee direction="left" style="flex: 1; white-space: nowrap;">
-            Welcome to SIFK Motorsports! &emsp;|&emsp; 
-            Find Your Perfect Ride Faster &emsp;|&emsp;
-            Made by Surya, Iarla, Fionn, Karol &emsp;|&emsp;
-            “Some men take good care of a car; others treat it like one of the family.” - Evan Esar &emsp;|&emsp;
-            <img src="ferrari_logo.png" style="width:20px;"> &nbsp;
-            <img src="lambo_logo.png" style="width:20px;"> &nbsp;
-            <img src="mas_logo.png" style="width:20px;"> &nbsp;
-            <img src="porsche_logo.png" style="width:20px;"> &nbsp;
-            <img src="bmw_logo.png" style="width:20px;"> &nbsp;
-            <img src="benz_logo.png" style="width:20px;"> &emsp;|&emsp;
-            <img src="insta_icon.png" style="width:20px;"> &nbsp;
-          <img src="x_icon.png" style="width:20px;"> &nbsp;
-          <img src="fb_icon.png" style="width:20px;"> &nbsp;
-          <img src="yt_icon.png" style="width:20px;"> &emsp;|&emsp;
-          "Life is too short to drive boring cars." – Elvis Presley &emsp;|&emsp;
-          "A racing car is an animal with a thousand adjustments." – Mario Andretti &emsp;|&emsp;
-          “Speed has never killed anyone. Suddenly becoming stationary, that's what gets you.” ― Jeremy Clarkson &emsp;|&emsp;
-          “I’d like to consider Ferrari as a scaled down version of God.” - Jeremy Clarkson &emsp;|&emsp;
-          “I’m sorry, but having an Aston Martin DB9 on the drive and not driving it is a bit like having Keira Knightley in your bed and sleeping on the couch. If you’ve got even half a scrotum it’s not going to happen.” - Jeremy Clarkson &emsp;|&emsp;
-          "Aerodynamics are for people who can't build engines" - Enzo Ferrari
-
-
+        <marquee direction="left" style="flex: 1; white-space: nowrap;">
+            Welcome to SIFK Motorsports! &emsp;&emsp; Made by Surya, Iarla, Fionn, Karol
         </marquee>
     </div>
 
@@ -128,10 +107,6 @@
 
   <!--Slideshow container-->
   <div class="slideshow-container">
-    <div class="mySlides">
-      <img class="mySlides-img" src="Fisk-poster.jpg" style="width:80%; display: block;margin-left: auto; margin-right:auto;">
-      <div class="text" style="bottom:40%"> Discover. Drive. Dare. Delight.
-      </div>
     <div class="mySlides">
       <img class="mySlides-img" src="m3_slide.jpg" style="width:80%; display: block;margin-left: auto; margin-right:auto;">
       <div class="text">BMW M3</div>
@@ -204,10 +179,10 @@ document.querySelector('.signupbtn').addEventListener('click', function(event) {
 
     <div class="big-cont">
     <ul class="navbar">
-        <li><a href="2-Door.html">2-Door</a></li>
-        <li><a href="4-Door.html">4-Door</a></li>
-        <li><a href="2-Wheeler.html">2-Wheeler</a></li>
-        <li><a href="Parts.html">Auto Parts</a></li>
+        <li><a href="file:///C:/Users/surya/Downloads/Motorworks/2-Door.html">2-Door</a></li>
+        <li><a href="file:///C:/Users/surya/Downloads/Motorworks/4-Door.html">4-Door</a></li>
+        <li><a href="file:///C:/Users/surya/Downloads/Motorworks/2-Wheeler.html">2-Wheeler</a></li>
+        <li style="text-decoration:underline;"><a href="file:///C:/Users/surya/Downloads/Motorworks/Parts.html">Auto Parts</a></li>
       </ul>
 
       <div class="parts-section">
@@ -545,8 +520,7 @@ document.querySelector('.signupbtn').addEventListener('click', function(event) {
     </div>
 </div>
     
-    <!--Footer-->
-      <footer class="bg-dark text-white text-center p-3">
+    <footer class="bg-dark text-white text-center p-3">
       <div class="container my-4">
         <div class="row">
           <div class="col-md-2">
@@ -575,34 +549,21 @@ document.querySelector('.signupbtn').addEventListener('click', function(event) {
           <div class="col-md-3">
             <h6 style="text-align: left;">Contact Us</h6>
             <ul class="footer-emails">
-              <li><a href="">surya.sathyarajan2@mail.dcu.ie</a></li>
-              <li><a href="">Fionn</a></li>
-              <li><a href="">Iarla</a></li>
-              <li><a href="">Karol</a></li>
+              <li><a href="file:///C:/Users/surya/Downloads/Motorworks/Home.html">surya.sathyarajan2@mail.dcu.ie</a></li>
+              <li><a href="file:///C:/Users/surya/Downloads/Motorworks/2-Door.html">Fionn</a></li>
+              <li><a href="file:///C:/Users/surya/Downloads/Motorworks/4-Door.html">Iarla</a></li>
+              <li><a href="file:///C:/Users/surya/Downloads/Motorworks/2-Wheeler.html">Karol</a></li>
             </ul>
         </div>
         <div class="col-md-2">
           <h6 style="text-align: left;">General</h6>
-          <ul class="footer-emails">
-            <li><a href="Signup.html">Sign Up</a></li>
-            <li><a href="Login.html">Log In</a></li>
-            <li><a href="Purchase.html">Checkout</a></li>
-          </ul>
       </div>
       <div class="col-md-3">
         <h6 style="text-align: left;">Socials</h6>
-        <ul class="footer-emails">
-        <li><img src="insta_icon.png" style="width:25px;" alt="f40">
-          <img src="x_icon.png" style="width:25px;" alt="f40">
-          <img src="fb_icon.png" style="width:25px;" alt="f40">
-          <img src="yt_icon.png" style="width:25px;" alt="f40"></li>
-
-        </ul>
     </div>
         </div>
       </div>
       </footer>
-
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
