--- a/2-Door.html
+++ b/2-Door.html
@@ -64,7 +64,7 @@ a.ui-link:hover{
 <body>
 
       
-    <div data-role="page" id="2door" data-transition="none">
+    <!--<div data-role="page" id="2door" data-transition="none">-->
       <div role="main">
       <!--Top Bar sliding text-->
       <div class="top-bar">
